--- a/Part1/chap1_2.ipynb
+++ b/Part1/chap1_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +256,115 @@
     "print(f\"Degree centrality = {nx.degree_centrality(G)}\")\n",
     "print(f\"Closeness centrality = {nx.closeness_centrality(G)}\")\n",
     "print(f\"Betweenness centrality = {nx.betweenness_centrality(G)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adj = [[0,1,1,0,0,0,0],\n",
+    " [1,0,0,1,1,0,0],\n",
+    " [1,0,0,0,0,1,1],\n",
+    " [0,1,0,0,0,0,0],\n",
+    " [0,1,0,0,0,0,0],\n",
+    " [0,0,1,0,0,0,0],\n",
+    " [0,0,1,0,0,0,0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploring graph algorithms\n",
+    "\n",
+    "BFS and DFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BFS\n",
+    "\n",
+    "G_FS = nx.Graph()\n",
+    "G_FS.add_edges_from([('A', 'B'), ('A', 'C'), ('B', 'D'),\n",
+    "('B', 'E'), ('C', 'F'), ('C', 'G')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bfs(graph, node):\n",
+    "    visited, queue = [node], [node]\n",
+    "    while queue:\n",
+    "        node = queue.pop(0)\n",
+    "        for neighbor in graph[node]:\n",
+    "            if neighbor not in visited:\n",
+    "                visited.append(neighbor)\n",
+    "                queue.append(neighbor)\n",
+    "    return visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visited = []\n",
+    "def dfs(visited, graph, node):\n",
+    "    if node not in visited:\n",
+    "        visited.append(node)\n",
+    "        for neighbor in graph[node]:\n",
+    "            visited = dfs(visited,graph,neighbor)\n",
+    "    return visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D', 'E', 'F', 'G']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bfs(G_FS,'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'D', 'E', 'C', 'F', 'G']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs(visited,G_FS,'A')"
    ]
   }
  ],
@@ -275,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
